@@ -261,6 +261,8 @@ ldns_zone_sort_oct(ldns_zone *zone)
 	ldns_rr_list *zrr;
 	assert(zone != NULL);
 
+#warning "Sorting seems off, dnssec-signzone differs"
+
 	zrr = ldns_zone_rrs(zone);
 	ldns_rr_list_sort_oct(zrr);
 }
@@ -270,6 +272,8 @@ ldns_zone_sort(ldns_zone *zone)
 {
 	ldns_rr_list *zrr;
 	assert(zone != NULL);
+
+#warning "Sorting seems off, dnssec-signzone differs"
 
 	zrr = ldns_zone_rrs(zone);
 	ldns_rr_list_sort(zrr);
